--- a/TAF.Web/Views/OctaneStore/_OctaneStoreIndex.cshtml
+++ b/TAF.Web/Views/OctaneStore/_OctaneStoreIndex.cshtml
@@ -1,4 +1,4 @@
-﻿@model TAF.Utility.KeyValue<List<SCBF.BaseInfo.Dto.SysDictionaryListDto>, List<SCBF.BaseInfo.Dto.SysDictionaryListDto>>
+﻿@using SCBF.BaseInfo.Dto
 <div class="row">
     <div class="col-xs-12 col-md-12">
         <div class="widget">
@@ -32,7 +32,7 @@
                                     <select id="searchStoreId" style="width: 100%" v-model="queryEntity.storeId">
                                         <option value="">请选择...</option>
                                         @{
-                                            foreach (var item in Model.Key)
+                                            foreach (var item in (List<SCBF.BaseInfo.Dto.SysDictionaryListDto>)ViewData["list1"])
                                             {
                                                 <option value="@item.Id">@item.Value</option>
                                             }
@@ -77,7 +77,7 @@
                                 <select id="searchEditStoreId" style="width: 100%" v-model="item.storeId" name="storeid" >
                                     <option value="" selected="selected">请选择...</option>
                                     @{
-                                        foreach (var item in Model.Key)
+                                        foreach (var item in (List<SysDictionaryListDto>)ViewData["list1"])
                                         {
                                             <option value="@item.Id">@item.Value</option>
                                         }
@@ -95,7 +95,7 @@
                                 <select id="searchEditOctaneRatingId" style="width: 100%" v-model="item.octaneRatingId" name="octaneratingid" >
                                     <option value="" selected="selected">请选择...</option>
                                     @{
-                                        foreach (var item in Model.Value)
+                                        foreach (var item in (List<SysDictionaryListDto>)ViewData["list2"])
                                         {
                                             <option value="@item.Id">@item.Value</option>
                                         }
