--- a/TAF.Web/Views/BudgetOutlay/_BudgetOutlayIndex.cshtml
+++ b/TAF.Web/Views/BudgetOutlay/_BudgetOutlayIndex.cshtml
@@ -26,16 +26,16 @@
                         <table class="table table-striped table-hover table-bordered ">
                             <thead>
                                 <tr role="row">
-                                    <th style="width: 60px;" rowspan="3">
+                                    <th style="width: 60px;" >
                                         操作
                                     </th>
-                                    <th style="width: 200px;" rowspan="3">
+                                    <th style="width: 200px;" >
                                         科目代码
                                     </th>
-                                    <th style="width: 200px;" rowspan="3">
+                                    <th style="width: 200px;" >
                                         科目名称
                                     </th>
-                                    <th style="width: 200px;" rowspan="3">
+                                    <th style="width: 200px;" >
                                         合计(万元)
                                     </th>
                                 </tr>
