--- a/TAF.Web/Views/Driver/_DriverIndex.cshtml
+++ b/TAF.Web/Views/Driver/_DriverIndex.cshtml
@@ -7,50 +7,65 @@
             </div>
             <div class="widget-body">
                 <div class="table-toolbar">
-                    <add-button title="新增"></add-button>
+                    <button type="button" class="btn btn-primary " v-on:click="showModifyDialog('新增驾驶员',null)"><i class="fa  fa-plus"></i> 新增</button>
                 </div>
                 <div class="row">
                     <div class="col-md-12">
                         <table class="table table-striped table-hover table-bordered ">
                             <thead>
-                                <tr role="row">
-                                    <th style="width: 100px;">
-                                         驾驶员姓名
-                                    </th>        
-                                    <th style="width: 200px;">
-                                        士兵证号
-                                    </th>        
-                                    <th style="width: 200px;">
-                                        驾驶证有效期
-                                    </th>
-                                    <th style="width: 200px;">
-                                        驾驶证号
-                                    </th>        
-                                    <th style="width: 100px;">
-                                        驾驶等级
-                                    </th>        
-                                    <th style="width: 200px;">
-                                        电话号码
-                                    </th>        
-                                    <th style="width: 200px;">
-                                        操作
-                                    </th>
-                                </tr>
+                            <tr role="row">
+                                <th style="width: 100px;">
+                                    驾驶员姓名
+                                </th>        
+                                <th style="width: 200px;">
+                                    士兵证号
+                                </th>        
+                                <th style="width: 200px;">
+                                    驾驶证有效期
+                                </th>
+                                <th style="width: 200px;">
+                                    驾驶证号
+                                </th>        
+                                <th style="width: 100px;">
+                                    驾驶等级
+                                </th>        
+                                <th style="width: 200px;">
+                                    电话号码
+                                </th>        
+                                <th style="width: 200px;">
+                                    操作
+                                </th>
+                            </tr>
                             </thead>
                             <tbody>
-                                <tr v-for="item in list">
-                                    <td>{{item.name}}</td>
-                                    <td>{{item.soldierId}}</td>
-                                    <td>{{item.validDrivingLicense}}</td>
-                                    <td>{{item.drivingLicense}}</td>
-                                    <td>{{item.level}}</td>
-                                    <td>{{item.phoneNumber}}</td>
-                                    <td>
-                                        <row-command :id="item.id" title="编辑" :name="item.name"></row-command>
+                            <tr v-for="item in list.items">
+                                <td>{{item.name}}</td>
+                                <td>{{item.soldierId}}</td>
+                                <td>{{item.validDrivingLicense}}</td>
+                                <td>{{item.drivingLicense}}</td>
+                                <td>{{item.level}}</td>
+                                <td>{{item.phoneNumber}}</td>
+                                <td>
+                                    <button type="button" class="btn   edit" v-on:click="showModifyDialog('编辑驾驶员',item.id)"><i class="fa fa-edit"></i> 编辑</button>
+                                    <button type="button" class="btn btn-danger  " v-on:click="showDeleteDialog(item.id,item.name) " ><i class="fa fa-trash-o"></i> 删除</button>
+                                </td>
+                            </tr>
+                            </tbody>
+                            <tfoot>
+                                <tr>
+                                    <td colspan="7" class="DTTTFooter ">
+                                        <div class="col-sm-4">
+                                            <div class="dataTables_info" id="simpledatatable_info" role="status" aria-live="polite"> {{list.from}} - {{list.to}} / {{list.total}} </div>
+                                        </div>
+                                        <div class="col-sm-8 ">
+                                            <div class="dataTables_paginate paging_bootstrap">
+                                                <ul id="container" class="pagination"></ul>
+                                            </div>
+                
+                                        </div>
                                     </td>
                                 </tr>
-                            </tbody>
-                            <tfoot is="table-foot" colspan="7"></tfoot>
+                            </tfoot>
                         </table>
                     </div>
                 </div>
@@ -58,95 +73,140 @@
         </div>
     </div>
 </div>
-<dialog-delete></dialog-delete>
-<form-edit></form-edit>
-<template id="driverFormBody">
-    <div id="form">
-        <validator name="v">
-            <form class="form-horizontal " name="form" novalidate>
-                <div class="row">
-                    <div class="col-md-12">
-                        <div class="form-group" >
-                            <label class="col-sm-2 control-label no-padding-right">驾驶员姓名<span class="red" >*</span></label>
-                            <div class="col-sm-10">
-                                <span class="input-icon icon-right">
-                                    <input type="text" class="form-control " placeholder="必填" name="name" v-model="item.name"  v-validate:name="{required:true}"/>
-                                </span>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col-md-12">
-                        <div class="form-group" >
-                            <label class="col-sm-2 control-label no-padding-right">士兵证号<span class="red" >*</span></label>
-                            <div class="col-sm-10">
-                                <span class="input-icon icon-right">
-                                    <input type="text" class="form-control " placeholder="必填" name="soldierId" v-model="item.soldierId"  v-validate:soldierid="{required:true}"/>
-                                </span>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-               <div class="row">
-                    <div class="col-md-12">
-                        <div class="form-group" >
-                            <label class="col-sm-2 control-label no-padding-right">驾驶证有效期<span class="red" >*</span></label>
-                            <div class="col-sm-10">
-                                <span class="input-icon icon-right">
-                                    <input class="form-control  " placeholder="必填"  type="text" id="datePickerValidDrivingLicense" readonly="readonly" v-model="item.validDrivingLicense" name="validdrivinglicense"  v-validate:validdrivinglicense="{required:true,dateTime:true}">
-                                        <i class="fa fa-calendar"></i>
-                                </span>                    
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col-md-12">
-                        <div class="form-group" >
-                            <label class="col-sm-2 control-label no-padding-right">驾驶证号<span class="red" >*</span></label>
-                            <div class="col-sm-10">
-                                <span class="input-icon icon-right">
-                                    <input type="text" class="form-control " placeholder="必填" name="drivingLicense" v-model="item.drivingLicense"  v-validate:drivinglicense="{required:true}"/>
-                                </span>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col-md-12">
-                        <div class="form-group" >
-                            <label class="col-sm-2 control-label no-padding-right">驾驶等级<span class="red" >*</span></label>
-                            <div class="col-sm-10">
-                                <select id="searchEditLevel" style="width: 100%" v-model="item.level" name="level" v-validate:level="{required:true}">
-                                    <option value="">请选择...</option>
-                                    @{
-                                        foreach (var item in Model)
-                                        {
-                                            <option value="@item.Id">@item.Value</option>
-                                        }
-                                    }
-                                </select>
-                            </div>
-                        </div>
-                    </div>
-                </div> 
-                <div class="row">
-                    <div class="col-md-12">
-                        <div class="form-group" >
-                            <label class="col-sm-2 control-label no-padding-right">电话号码<span class="red" >*</span></label>
-                            <div class="col-sm-10">
-                                <span class="input-icon icon-right">
-                                    <input type="text" class="form-control " placeholder="必填" name="phoneNumber" v-model="item.phoneNumber"  v-validate:phonenumber="{required:true}"/>
-                                </span>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </form>
-        </validator>
+
+<!-- 删除对话框 -->
+<div class="bootbox modal fade modal-darkorange in" id="deleteDriverDialog">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
+                <h4 class="modal-title">删除</h4>
+                <div v-model="title"></div>
+            </div>
+            <div class="modal-body">
+                <div class="bootbox-body">确认删除{{deleteEntity.name}}？</div>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-default" data-dismiss="modal"> <i class="fa   fa-mail-reply"></i> 取消</button>
+                <button type="button" class="btn btn-danger" v-on:click="delete(deleteEntity.id)"><i class="fa   fa-trash-o"></i>删除</button>
+            </div>
+        </div>
     </div>
-</template>
+</div>
+
+<!-- 编辑对话框 -->
+<div class="bootbox modal fade modal-primary in" id="modifyDriverDialog">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
+                <h4 class="modal-title">{{ modifyEntity.modifyTitle }}</h4>
+                <div v-model="title"></div>
+            </div>
+            <div class="modal-body">
+                <div id="form">
+                    <validator name="v">
+                        <form class="form-horizontal " name="form" novalidate>
+                            <div class="row">
+                                <div class="col-md-12">
+                                    <div class="form-group" >
+                                        <label class="col-sm-2 control-label no-padding-right">驾驶员姓名<span class="red" >*</span></label>
+                                        <div class="col-sm-10">
+                                            <span class="input-icon icon-right">
+                                                <input type="text" class="form-control " placeholder="必填" name="name" v-model="item.name"  v-validate:name="{required:true}"/>
+                                            </span>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="col-md-12">
+                                    <div class="form-group" >
+                                        <label class="col-sm-2 control-label no-padding-right">士兵证号<span class="red" >*</span></label>
+                                        <div class="col-sm-10">
+                                            <span class="input-icon icon-right">
+                                                <input type="text" class="form-control " placeholder="必填" name="soldierId" v-model="item.soldierId"  v-validate:soldierid="{required:true}"/>
+                                            </span>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="col-md-12">
+                                    <div class="form-group" >
+                                        <label class="col-sm-2 control-label no-padding-right">驾驶证有效期<span class="red" >*</span></label>
+                                        <div class="col-sm-10">
+                                            <span class="input-icon icon-right">
+                                                <input class="form-control  " placeholder="必填"  type="text" id="datePickerValidDrivingLicense" readonly="readonly" v-model="item.validDrivingLicense" name="validdrivinglicense"  v-validate:validdrivinglicense="{required:true,dateTime:true}">
+                                                <i class="fa fa-calendar"></i>
+                                            </span>                    
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="col-md-12">
+                                    <div class="form-group" >
+                                        <label class="col-sm-2 control-label no-padding-right">驾驶证号<span class="red" >*</span></label>
+                                        <div class="col-sm-10">
+                                            <span class="input-icon icon-right">
+                                                <input type="text" class="form-control " placeholder="必填" name="drivingLicense" v-model="item.drivingLicense"  v-validate:drivinglicense="{required:true}"/>
+                                            </span>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="col-md-12">
+                                    <div class="form-group" >
+                                        <label class="col-sm-2 control-label no-padding-right">驾驶等级<span class="red" >*</span></label>
+                                        <div class="col-sm-10">
+                                            <select id="searchEditLevel" style="width: 100%" v-model="item.level" name="level" v-validate:level="{required:true}">
+                                                <option value="">请选择...</option>
+                                                @{
+                                                    foreach (var item in Model)
+                                                    {
+                                                        <option value="@item.Id">@item.Value</option>
+                                                    }
+                                                }
+                                            </select>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div> 
+                            <div class="row">
+                                <div class="col-md-12">
+                                    <div class="form-group" >
+                                        <label class="col-sm-2 control-label no-padding-right">电话号码<span class="red" >*</span></label>
+                                        <div class="col-sm-10">
+                                            <span class="input-icon icon-right">
+                                                <input type="text" class="form-control " placeholder="必填" name="phoneNumber" v-model="item.phoneNumber"  v-validate:phonenumber="{required:true}"/>
+                                            </span>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </form>
+                    </validator>
+                </div>
+                <div class="row" id="unknownError" style="display: none;">
+                    <div class="col-md-12">
+                        <div class="form-group  has-feedback has-error">
+                            <div class="col-md-10 col-md-offset-2">
+                                <small class="help-block"></small>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-default" data-dismiss="modal"><i class='fa   fa-mail-reply'></i>取消</button>
+                <button type="submit" class="btn btn-primary" v-on:click="saveNew()" v-show="!modifyEntity.editModel"  disabled="{{!$v.valid}}" ><i class='fa    fa-floppy-o'></i>保存新增 </button>
+                <button type="submit" class="btn btn-primary" v-on:click="save()"  disabled="{{!$v.valid}}" ><i class='fa    fa-floppy-o'></i>保存关闭</button>
+            </div>
+        </div>
+    </div>
+</div>
 <script src="~/Scripts/driver.js"></script>
 
 
