完成油料入库审批单

--- a/TAF.Web/Views/Car/_CarInfoIndex.cshtml
+++ b/TAF.Web/Views/Car/_CarInfoIndex.cshtml
@@ -348,7 +348,7 @@
 </div>
 <dialog-delete></dialog-delete>
 <form-edit></form-edit>
-<template id="carInfoFormBody">
+<template id="carFormBody">
     <div id="form">
         <validator name="v">
             <form class="form-horizontal " name="form" novalidate>
