--- a/TAF.Web/Views/OilRechargeRecord/_OilRechargeRecordIndex.cshtml
+++ b/TAF.Web/Views/OilRechargeRecord/_OilRechargeRecordIndex.cshtml
@@ -94,7 +94,7 @@
                         <div class="form-group" >
                             <label class="col-sm-2 control-label no-padding-right">数量(L)<span class="red" >*</span></label>
                             <div class="col-sm-10">
-                             <input type="number" v-model="item.amount" id="amount"/>
+                             <input type="number" v-model="item.amount" id="amount" class="form-control "/>
                             </div>
                         </div>
                     </div>
@@ -102,7 +102,7 @@
                 <div class="row">
                     <div class="col-md-12">
                         <div class="form-group" >
-                            <label class="col-sm-2 control-label no-padding-right">备注<span class="red" >*</span></label>
+                            <label class="col-sm-2 control-label no-padding-right">备注</label>
                             <div class="col-sm-10">
                                 <span class="input-icon icon-right">
                                     <textarea rows="4" class="form-control "  name="note" v-model="item.note" ></textarea>
