完成月实物油料加油汇总核对表

--- a/TAF.Web/Views/ApplicationForBunkerB/_ApplicationForBunkerBIndex2.cshtml
+++ b/TAF.Web/Views/ApplicationForBunkerB/_ApplicationForBunkerBIndex2.cshtml
@@ -238,7 +238,7 @@
                 <div class="row">
                     <div class="col-md-12">
                         <div class="form-group" >
-                            <label class="col-sm-2 control-label no-padding-right">Date<span class="red" >*</span></label>
+                            <label class="col-sm-2 control-label no-padding-right">加油时间<span class="red" >*</span></label>
                             <div class="col-sm-10">
                                 <span class="input-icon icon-right">
                                     <input class="form-control  " placeholder="必填"  type="text" id="datePickerDate" readonly="readonly" v-model="item.date" name="date"  v-validate:date="{required:true,dateTime:true}">
