--- a/TAF.Web/Views/UploadOilCarRoofRelationship/_UploadOilCarRoofRelationshipIndex.cshtml
+++ b/TAF.Web/Views/UploadOilCarRoofRelationship/_UploadOilCarRoofRelationshipIndex.cshtml
@@ -23,7 +23,7 @@
                                 <option value="12">12</option>
                             </select>
                             <button type="button" class="btn btn-default" v-on:click="query()"><i class="fa fa-search"></i> 查询</button>
-                            <button type="button" class="btn btn-blue" v-on:click="link()"><i class="fa  fa-chain"></i> 关联</button>
+                            <button type="button" class="btn btn-blue" v-on:click="link()"><i class="glyphicon glyphicon-link"></i> 关联</button>
                             <button type="button" class="btn btn-danger" v-on:click="showDelete()"><i class="fa fa-minus"></i> 作废</button>
                         </div>
                         <div class="col-md-5">
