--- a/TAF.Web/Views/Car/_CarInfoIndex.cshtml
+++ b/TAF.Web/Views/Car/_CarInfoIndex.cshtml
@@ -224,6 +224,9 @@
                                                     <th style="width: 200px;">
                                                         姓名
                                                     </th>
+                                                    <th style="width: 100px;">
+                                                        升/吨换算系数
+                                                    </th>
                                                     <th style="width: 200px;">
                                                         操作
                                                     </th>
@@ -232,6 +235,7 @@
                                                 <tbody>
                                                 <tr v-for="item in list">
                                                     <td>{{item.value}}</td>
+                                                    <td>{{item.value2}}</td>
                                                     <td>
                                                         <row-command :id="item.id" title="编辑" :name="item.value"></row-command>
                                                     </td>
@@ -394,6 +398,20 @@
                                 <div class="col-sm-10">
                                     <span class="input-icon icon-right">
                                         <input type="number" class="form-control " placeholder="必填" name="value" v-model="item.value2" v-validate:value2="{required:true}"/>
+                                    </span>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div v-if="item.category=='Car_OctaneRating'">
+                    <div class="row">
+                        <div class="col-md-12">
+                            <div class="form-group">
+                                <label class="col-sm-2 control-label no-padding-right">升/吨换算系数<span class="red">*</span></label>
+                                <div class="col-sm-10">
+                                    <span class="input-icon icon-right">
+                                        <input type="text" class="form-control " placeholder="必填" name="value" v-model="item.value2" v-validate:value2="{required:true}" />
                                     </span>
                                 </div>
                             </div>
