--- a/TAF.Web/Views/Car/_CarInfoIndex.cshtml
+++ b/TAF.Web/Views/Car/_CarInfoIndex.cshtml
@@ -56,7 +56,22 @@
                                     </a>
                                 </li>
                                 <li class=" ">
-                                    <a data-toggle="tab" href="#year" aria-expanded="true" id="pyear">
+                                    <a data-toggle="tab" href="#overhaulAmount" aria-expanded="true" id="poverhaulAmount">
+                                        大修维护控制额
+                                    </a>
+                                </li>
+                                <li class=" ">
+                                    <a data-toggle="tab" href="#repairAmount" aria-expanded="true" id="prepairAmount">
+                                        中修维护控制额
+                                    </a>
+                                </li>
+                                <li class=" ">
+                                    <a data-toggle="tab" href="#minorRepairAmount" aria-expanded="true" id="pminorRepairAmount">
+                                        小修维护控制额
+                                    </a>
+                                </li>
+                                <li class=" ">
+                                    <a data-toggle="tab" href="#year" aria-expanded="true" id="minorRepairAmount">
                                         会计年度
                                     </a>
                                 </li>
@@ -280,40 +295,121 @@
                                         </div>
                                     </div>
                                 </div>
-                                <div id="oilWearWinter" class="tab-pane ">
-                                    <div class="table-toolbar">
-                                        <a href="javascript:void(0);" class="btn btn-primary " v-on:click="newItem('冬季起止时间','Car_OilWearWinter')"><i class="fa  fa-plus"></i> 新增</a>
-                                    </div>
-                                    <div class="row">
-                                        <div class="col-md-6">
-                                            <table class="table table-striped table-hover table-bordered ">
-                                                <thead>
-                                                <tr role="row">
-                                                    <th style="width: 200px;">
-                                                        起始月份
-                                                    </th> 
-                                                    <th style="width: 200px;">
-                                                        截止月份
-                                                    </th>
-                                                    <th style="width: 200px;">
-                                                        操作
-                                                    </th>
-                                                </tr>
-                                                </thead>
-                                                <tbody>
-                                                <tr v-for="item in list">
-                                                    <td>{{item.value}}</td>
-                                                    <td>{{item.value2}}</td>
-                                                    <td>
-                                                        <row-command :id="item.id" title="编辑" :name="item.value"></row-command>
-                                                    </td>
-                                                </tr>
-                                                </tbody>
-                                                <tfoot is="table-foot" colspan="3"></tfoot>
-                                            </table>
-                                        </div>
+                            <div id="oilWearWinter" class="tab-pane ">
+                                <div class="table-toolbar">
+                                    <a href="javascript:void(0);" class="btn btn-primary " v-on:click="newItem('冬季起止时间','Car_OilWearWinter')"><i class="fa  fa-plus"></i> 新增</a>
+                                </div>
+                                <div class="row">
+                                    <div class="col-md-6">
+                                        <table class="table table-striped table-hover table-bordered ">
+                                            <thead>
+                                            <tr role="row">
+                                                <th style="width: 200px;">
+                                                    起始月份
+                                                </th> 
+                                                <th style="width: 200px;">
+                                                    截止月份
+                                                </th>
+                                                <th style="width: 200px;">
+                                                    操作
+                                                </th>
+                                            </tr>
+                                            </thead>
+                                            <tbody>
+                                            <tr v-for="item in list">
+                                                <td>{{item.value}}</td>
+                                                <td>{{item.value2}}</td>
+                                                <td>
+                                                    <row-command :id="item.id" title="编辑" :name="item.value"></row-command>
+                                                </td>
+                                            </tr>
+                                            </tbody>
+                                            <tfoot is="table-foot" colspan="3"></tfoot>
+                                        </table>
                                     </div>
                                 </div>
+                            </div>
+                            <div id="overhaulAmount" class="tab-pane ">
+                                <div class="row">
+                                    <div class="col-md-6">
+                                        <table class="table table-striped table-hover table-bordered ">
+                                            <thead>
+                                            <tr role="row">
+                                                <th style="width: 200px;">
+                                                    大修维护控制额(元)
+                                                </th>
+                                                <th style="width: 200px;">
+                                                    操作
+                                                </th>
+                                            </tr>
+                                            </thead>
+                                            <tbody>
+                                            <tr v-for="item in list">
+                                                <td>{{item.value}}</td>
+                                                <td>
+                                                    <row-command :id="item.id" title="编辑" :name="item.value" showDel="false"></row-command>
+                                                </td>
+                                            </tr>
+                                            </tbody>
+                                            <tfoot is="table-foot" colspan="2"></tfoot>
+                                        </table>
+                                    </div>
+                                </div>
+                            </div>
+                            <div id="repairAmount" class="tab-pane ">
+                                <div class="row">
+                                    <div class="col-md-6">
+                                        <table class="table table-striped table-hover table-bordered ">
+                                            <thead>
+                                            <tr role="row">
+                                                <th style="width: 200px;">
+                                                    中修维护控制额(元)
+                                                </th>
+                                                <th style="width: 200px;">
+                                                    操作
+                                                </th>
+                                            </tr>
+                                            </thead>
+                                            <tbody>
+                                            <tr v-for="item in list">
+                                                <td>{{item.value}}</td>
+                                                <td>
+                                                    <row-command :id="item.id" title="编辑" :name="item.value" showDel="false"></row-command>
+                                                </td>
+                                            </tr>
+                                            </tbody>
+                                            <tfoot is="table-foot" colspan="2"></tfoot>
+                                        </table>
+                                    </div>
+                                </div>
+                            </div>
+                            <div id="minorRepairAmount" class="tab-pane ">
+                                <div class="row">
+                                    <div class="col-md-6">
+                                        <table class="table table-striped table-hover table-bordered ">
+                                            <thead>
+                                            <tr role="row">
+                                                <th style="width: 200px;">
+                                                    小修维护控制额(元)
+                                                </th>
+                                                <th style="width: 200px;">
+                                                    操作
+                                                </th>
+                                            </tr>
+                                            </thead>
+                                            <tbody>
+                                            <tr v-for="item in list">
+                                                <td>{{item.value}}</td>
+                                                <td>
+                                                    <row-command :id="item.id" title="编辑" :name="item.value" showDel="false"></row-command>
+                                                </td>
+                                            </tr>
+                                            </tbody>
+                                            <tfoot is="table-foot" colspan="2"></tfoot>
+                                        </table>
+                                    </div>
+                                </div>
+                            </div>
                                 <div id="year" class="tab-pane ">
                                     <div class="table-toolbar">
                                         <a href="javascript:void(0);" class="btn btn-primary " v-on:click="newItem('会计年度','Car_Year')"><i class="fa  fa-plus"></i> 新增</a>
